tests/errors/define_func.HC
//ERR: no #define functions exist
#define SQR(x) ((x)*(x))
"%d\n",SQR(4);
